# CS171

./: .gitmodules
hw0/: README.txt
hw0/Part1/: Makefile  hw0_p1  hw0_p1.cpp
hw0/Part2/: .old.Makefile  Makefile  hw0_p2  hw0_p2.cpp
hw0/Part3/: Makefile  hw0_p3  hw0_p3.cpp  test_file6.txt
hw0/Part4/: Makefile  ppm_test  ppm_test.cpp
hw0/utils/: obj_model.cpp
hw0/utils/include/: hw_specific.h  obj_model.h  ppm_image.h
hw1/: CMakeLists.txt  main.cpp  readme.md  readme.txt
hw1/utils/: models.cpp  rendering.cpp
hw1/utils/include/: homework_specific.h  models.h  rendering.h  scene.h  transformation.h
hw2/: CMakeLists.txt  main.cpp  readme.txt
hw2/utils/: Makefile  models.cpp  rendering.cpp
hw2/utils/include/: models.h  ppm_image.h  rendering.h  scene.h  shader.h  transformation.h
hw3/: CMakeLists.txt  main.cpp  readme.txt
hw3/demo/: Makefile  opengl_demo.cpp
hw3/utils/: models.cpp  opengl_handlers.cpp  opengl_utils.cpp  rendering.cpp
hw3/utils/include/: models.h  opengl_handlers.h  opengl_utils.h  rendering.h  scene.h  shader.h  transformation.h
